Includes all 4 platforms